--- a/Code java/LivraisOO/.project
+++ b/Code java/LivraisOO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>livraisoo</name>
+	<name>LivraisOO</name>
 	<comment></comment>
 	<projects>
 	</projects>
