Refactoring the project/ updating the readme file

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LivraisOO</name>
+	<name>Dev-OO</name>
 	<comment></comment>
 	<projects>
 	</projects>
